Bug #229872 --> The filename with non-ascii characters doesn't show up in the attachment window.